// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`autocompleteTermSuggestions autocomplete within query for plain string match {jotu} - {jötunn} 1`] = `
[
  {
    "highlightRange": {
      "range": [
        0,
        13,
      ],
      "section": "body",
    },
    "query": {
      "body": "name:"jötunn"",
      "fullText": "name:"jötunn"",
      "helpText": undefined,
    },
    "type": 3,
  },
]
`;

exports[`filterComplete autocomplete terms for |is:b| 1`] = `
[
  "is:bow",
  "is:blue",
]
`;

exports[`filterComplete autocomplete terms for |jun| 1`] = `
[
  "tag:junk",
]
`;

exports[`filterComplete autocomplete terms for |ote| 1`] = `
[
  "is:hasnotes",
  "is:emotes",
  "notes:",
]
`;

exports[`filterComplete autocomplete terms for |sni| 1`] = `
[
  "is:sniperrifle",
]
`;

exports[`filterComplete autocomplete terms for |stat:| 1`] = `
[
  "stat:rpm:",
  "stat:rof:",
  "stat:charge:",
  "stat:impact:",
  "stat:handling:",
  "stat:ventspeed:",
  "stat:heatgen:",
  "stat:cooling:",
  "stat:range:",
  "stat:stability:",
  "stat:reload:",
  "stat:magazine:",
  "stat:aimassist:",
  "stat:equipspeed:",
  "stat:shieldduration:",
  "stat:velocity:",
  "stat:blastradius:",
  "stat:recoildirection:",
  "stat:drawtime:",
  "stat:zoom:",
  "stat:airborne:",
  "stat:accuracy:",
  "stat:ammogen:",
  "stat:persistence:",
  "stat:swingspeed:",
  "stat:guardefficiency:",
  "stat:guardresistance:",
  "stat:chargerate:",
  "stat:guardendurance:",
  "stat:ammocapacity:",
  "stat:weapons:",
  "stat:health:",
  "stat:class:",
  "stat:grenade:",
  "stat:super:",
  "stat:melee:",
  "stat:mobility:",
  "stat:resilience:",
  "stat:recovery:",
  "stat:discipline:",
  "stat:intellect:",
  "stat:strength:",
  "stat:total:",
  "stat:any:",
  "stat:highest:",
  "stat:secondhighest:",
  "stat:thirdhighest:",
  "stat:fourthhighest:",
  "stat:fifthhighest:",
  "stat:sixthhighest:",
  "stat:rpm:<",
  "stat:rpm:>",
  "stat:rof:<",
  "stat:rof:>",
  "stat:charge:<",
  "stat:charge:>",
  "stat:impact:<",
  "stat:impact:>",
  "stat:handling:<",
  "stat:handling:>",
  "stat:ventspeed:<",
  "stat:ventspeed:>",
  "stat:heatgen:<",
  "stat:heatgen:>",
  "stat:cooling:<",
  "stat:cooling:>",
  "stat:range:<",
  "stat:range:>",
  "stat:stability:<",
  "stat:stability:>",
  "stat:reload:<",
  "stat:reload:>",
  "stat:magazine:<",
  "stat:magazine:>",
  "stat:aimassist:<",
  "stat:aimassist:>",
  "stat:equipspeed:<",
  "stat:equipspeed:>",
  "stat:shieldduration:<",
  "stat:shieldduration:>",
  "stat:velocity:<",
  "stat:velocity:>",
  "stat:blastradius:<",
  "stat:blastradius:>",
  "stat:recoildirection:<",
  "stat:recoildirection:>",
  "stat:drawtime:<",
  "stat:drawtime:>",
  "stat:zoom:<",
  "stat:zoom:>",
  "stat:airborne:<",
  "stat:airborne:>",
  "stat:accuracy:<",
  "stat:accuracy:>",
  "stat:ammogen:<",
  "stat:ammogen:>",
  "stat:persistence:<",
  "stat:persistence:>",
  "stat:swingspeed:<",
  "stat:swingspeed:>",
  "stat:guardefficiency:<",
  "stat:guardefficiency:>",
  "stat:guardresistance:<",
  "stat:guardresistance:>",
  "stat:chargerate:<",
  "stat:chargerate:>",
  "stat:guardendurance:<",
  "stat:guardendurance:>",
  "stat:ammocapacity:<",
  "stat:ammocapacity:>",
  "stat:weapons:<",
  "stat:weapons:>",
  "stat:health:<",
  "stat:health:>",
  "stat:class:<",
  "stat:class:>",
  "stat:grenade:<",
  "stat:grenade:>",
  "stat:super:<",
  "stat:super:>",
  "stat:melee:<",
  "stat:melee:>",
  "stat:mobility:<",
  "stat:mobility:>",
  "stat:resilience:<",
  "stat:resilience:>",
  "stat:recovery:<",
  "stat:recovery:>",
  "stat:discipline:<",
  "stat:discipline:>",
  "stat:intellect:<",
  "stat:intellect:>",
  "stat:strength:<",
  "stat:strength:>",
  "stat:total:<",
  "stat:total:>",
  "stat:any:<",
  "stat:any:>",
  "stat:highest:<",
  "stat:highest:>",
  "stat:secondhighest:<",
  "stat:secondhighest:>",
  "stat:thirdhighest:<",
  "stat:thirdhighest:>",
  "stat:fourthhighest:<",
  "stat:fourthhighest:>",
  "stat:fifthhighest:<",
  "stat:fifthhighest:>",
  "stat:sixthhighest:<",
  "stat:sixthhighest:>",
  "stat:rpm:<=",
  "stat:rpm:>=",
  "stat:rof:<=",
  "stat:rof:>=",
  "stat:charge:<=",
  "stat:charge:>=",
  "stat:impact:<=",
  "stat:impact:>=",
  "stat:handling:<=",
  "stat:handling:>=",
  "stat:ventspeed:<=",
  "stat:ventspeed:>=",
  "stat:heatgen:<=",
  "stat:heatgen:>=",
  "stat:cooling:<=",
  "stat:cooling:>=",
  "stat:range:<=",
  "stat:range:>=",
  "stat:stability:<=",
  "stat:stability:>=",
  "stat:reload:<=",
  "stat:reload:>=",
  "stat:magazine:<=",
  "stat:magazine:>=",
  "stat:aimassist:<=",
  "stat:aimassist:>=",
  "stat:equipspeed:<=",
  "stat:equipspeed:>=",
  "stat:shieldduration:<=",
  "stat:shieldduration:>=",
  "stat:velocity:<=",
  "stat:velocity:>=",
  "stat:blastradius:<=",
  "stat:blastradius:>=",
  "stat:recoildirection:<=",
  "stat:recoildirection:>=",
  "stat:drawtime:<=",
  "stat:drawtime:>=",
  "stat:zoom:<=",
  "stat:zoom:>=",
  "stat:airborne:<=",
  "stat:airborne:>=",
  "stat:accuracy:<=",
  "stat:accuracy:>=",
  "stat:ammogen:<=",
  "stat:ammogen:>=",
  "stat:persistence:<=",
  "stat:persistence:>=",
  "stat:swingspeed:<=",
  "stat:swingspeed:>=",
  "stat:guardefficiency:<=",
  "stat:guardefficiency:>=",
  "stat:guardresistance:<=",
  "stat:guardresistance:>=",
  "stat:chargerate:<=",
  "stat:chargerate:>=",
  "stat:guardendurance:<=",
  "stat:guardendurance:>=",
  "stat:ammocapacity:<=",
  "stat:ammocapacity:>=",
  "stat:weapons:<=",
  "stat:weapons:>=",
  "stat:health:<=",
  "stat:health:>=",
  "stat:class:<=",
  "stat:class:>=",
  "stat:grenade:<=",
  "stat:grenade:>=",
  "stat:super:<=",
  "stat:super:>=",
  "stat:melee:<=",
  "stat:melee:>=",
  "stat:mobility:<=",
  "stat:mobility:>=",
  "stat:resilience:<=",
  "stat:resilience:>=",
  "stat:recovery:<=",
  "stat:recovery:>=",
  "stat:discipline:<=",
  "stat:discipline:>=",
  "stat:intellect:<=",
  "stat:intellect:>=",
  "stat:strength:<=",
  "stat:strength:>=",
  "stat:total:<=",
  "stat:total:>=",
  "stat:any:<=",
  "stat:any:>=",
  "stat:highest:<=",
  "stat:highest:>=",
  "stat:secondhighest:<=",
  "stat:secondhighest:>=",
  "stat:thirdhighest:<=",
  "stat:thirdhighest:>=",
  "stat:fourthhighest:<=",
  "stat:fourthhighest:>=",
  "stat:fifthhighest:<=",
  "stat:fifthhighest:>=",
  "stat:sixthhighest:<=",
  "stat:sixthhighest:>=",
]
`;

exports[`filterComplete autocomplete terms for |stat:mob| 1`] = `
[
  "stat:mobility:",
]
`;

exports[`filterComplete autocomplete terms for |stat| 1`] = `
[
  "stat:",
  "dupe:stats",
  "dupe:statlower",
  "basestat:",
  "maxstatloadout:",
  "maxstatvalue:",
  "maxbasestatvalue:",
  "primarystat:",
  "secondarystat:",
  "tertiarystat:",
  "tunedstat:",
  "dupe:archetype+tertiarystat",
  "dupe:nonzerostats",
  "dupe:setbonus+statlower",
  "dupe:customstatlower",
  "source:heliostat",
  "maxstatloadout:weapons",
  "maxstatloadout:health",
  "maxstatloadout:class",
  "maxstatloadout:grenade",
  "maxstatloadout:super",
  "maxstatloadout:melee",
  "maxstatloadout:mobility",
  "maxstatloadout:resilience",
  "maxstatloadout:recovery",
  "maxstatloadout:discipline",
  "maxstatloadout:intellect",
  "maxstatloadout:strength",
  "maxstatloadout:total",
  "maxstatvalue:weapons",
  "maxstatvalue:health",
  "maxstatvalue:class",
  "maxstatvalue:grenade",
  "maxstatvalue:super",
  "maxstatvalue:melee",
  "maxstatvalue:mobility",
  "maxstatvalue:resilience",
  "maxstatvalue:recovery",
  "maxstatvalue:discipline",
  "maxstatvalue:intellect",
  "maxstatvalue:strength",
  "maxstatvalue:total",
  "maxstatvalue:any",
  "maxbasestatvalue:weapons",
  "maxbasestatvalue:health",
  "maxbasestatvalue:class",
  "maxbasestatvalue:grenade",
  "maxbasestatvalue:super",
  "maxbasestatvalue:melee",
  "maxbasestatvalue:mobility",
  "maxbasestatvalue:resilience",
  "maxbasestatvalue:recovery",
  "maxbasestatvalue:discipline",
  "maxbasestatvalue:intellect",
  "maxbasestatvalue:strength",
  "maxbasestatvalue:total",
  "maxbasestatvalue:any",
  "primarystat:weapons",
  "secondarystat:weapons",
  "tertiarystat:weapons",
  "primarystat:health",
  "secondarystat:health",
  "tertiarystat:health",
  "primarystat:class",
  "secondarystat:class",
  "tertiarystat:class",
  "primarystat:grenade",
  "secondarystat:grenade",
  "tertiarystat:grenade",
  "primarystat:super",
  "secondarystat:super",
  "tertiarystat:super",
  "primarystat:melee",
  "secondarystat:melee",
  "tertiarystat:melee",
  "tunedstat:weapons",
  "tunedstat:health",
  "tunedstat:class",
  "tunedstat:grenade",
  "tunedstat:super",
  "tunedstat:melee",
  "tunedstat:primary",
  "tunedstat:secondary",
  "tunedstat:tertiary",
  "tunedstat:unfocused",
  "stat:rpm:",
  "stat:rof:",
  "stat:charge:",
  "stat:impact:",
  "stat:handling:",
  "stat:ventspeed:",
  "stat:heatgen:",
  "stat:cooling:",
  "stat:range:",
  "stat:stability:",
  "stat:reload:",
  "stat:magazine:",
  "stat:aimassist:",
  "stat:equipspeed:",
  "stat:shieldduration:",
  "stat:velocity:",
  "stat:blastradius:",
  "stat:recoildirection:",
  "stat:drawtime:",
  "stat:zoom:",
  "stat:airborne:",
  "stat:accuracy:",
  "stat:ammogen:",
  "stat:persistence:",
  "stat:swingspeed:",
  "stat:guardefficiency:",
  "stat:guardresistance:",
  "stat:chargerate:",
  "stat:guardendurance:",
  "stat:ammocapacity:",
  "stat:weapons:",
  "stat:health:",
  "stat:class:",
  "stat:grenade:",
  "stat:super:",
  "stat:melee:",
  "stat:mobility:",
  "stat:resilience:",
  "stat:recovery:",
  "stat:discipline:",
  "stat:intellect:",
  "stat:strength:",
  "stat:total:",
  "stat:any:",
  "stat:highest:",
  "stat:secondhighest:",
  "stat:thirdhighest:",
  "stat:fourthhighest:",
  "stat:fifthhighest:",
  "stat:sixthhighest:",
  "basestat:weapons:",
  "basestat:health:",
  "basestat:class:",
  "basestat:grenade:",
  "basestat:super:",
  "basestat:melee:",
  "basestat:mobility:",
  "basestat:resilience:",
  "basestat:recovery:",
  "basestat:discipline:",
  "basestat:intellect:",
  "basestat:strength:",
  "basestat:total:",
  "basestat:any:",
  "basestat:highest:",
  "basestat:secondhighest:",
  "basestat:thirdhighest:",
  "basestat:fourthhighest:",
  "basestat:fifthhighest:",
  "basestat:sixthhighest:",
]
`;

exports[`filterSortRecentSearches check saved search highlighting for query || 1`] = `
[
  {
    "query": {
      "body": "is:patternunlocked -is:crafted",
      "fullText": "is:patternunlocked -is:crafted",
      "header": undefined,
    },
    "type": 1,
  },
  {
    "query": {
      "body": "is:patternunlocked -is:crafted",
      "fullText": "/* random-roll craftable guns */ is:patternunlocked -is:crafted",
      "header": "random-roll craftable guns",
    },
    "type": 1,
  },
]
`;

exports[`filterSortRecentSearches check saved search highlighting for query |craft| 1`] = `
[
  {
    "highlightRange": {
      "range": [
        23,
        28,
      ],
      "section": "body",
    },
    "query": {
      "body": "is:patternunlocked -is:crafted",
      "fullText": "is:patternunlocked -is:crafted",
      "header": undefined,
    },
    "type": 1,
  },
  {
    "highlightRange": {
      "range": [
        12,
        17,
      ],
      "section": "header",
    },
    "query": {
      "body": "is:patternunlocked -is:crafted",
      "fullText": "/* random-roll craftable guns */ is:patternunlocked -is:crafted",
      "header": "random-roll craftable guns",
    },
    "type": 1,
  },
]
`;

exports[`filterSortRecentSearches check saved search highlighting for query |craftable| 1`] = `
[
  {
    "highlightRange": {
      "range": [
        12,
        21,
      ],
      "section": "header",
    },
    "query": {
      "body": "is:patternunlocked -is:crafted",
      "fullText": "/* random-roll craftable guns */ is:patternunlocked -is:crafted",
      "header": "random-roll craftable guns",
    },
    "type": 1,
  },
]
`;

exports[`filterSortRecentSearches check saved search highlighting for query |crafted| 1`] = `
[
  {
    "highlightRange": {
      "range": [
        23,
        30,
      ],
      "section": "body",
    },
    "query": {
      "body": "is:patternunlocked -is:crafted",
      "fullText": "is:patternunlocked -is:crafted",
      "header": undefined,
    },
    "type": 1,
  },
  {
    "highlightRange": {
      "range": [
        23,
        30,
      ],
      "section": "body",
    },
    "query": {
      "body": "is:patternunlocked -is:crafted",
      "fullText": "/* random-roll craftable guns */ is:patternunlocked -is:crafted",
      "header": "random-roll craftable guns",
    },
    "type": 1,
  },
]
`;

exports[`filterSortRecentSearches filter/sort recent searches for query || 1`] = `
[
  "recent saved",
  "yearold saved",
  "0 days old, 9 uses",
  "0 days old, 8 uses",
  "dayold highuse",
  "0 days old, 7 uses",
  "1 days old, 9 uses",
  "1 days old, 8 uses",
  "0 days old, 6 uses",
  "1 days old, 7 uses",
  "2 days old, 9 uses",
  "2 days old, 8 uses",
  "1 days old, 6 uses",
  "2 days old, 7 uses",
  "3 days old, 9 uses",
  "0 days old, 5 uses",
  "3 days old, 8 uses",
  "2 days old, 6 uses",
  "3 days old, 7 uses",
  "4 days old, 9 uses",
  "1 days old, 5 uses",
  "4 days old, 8 uses",
  "3 days old, 6 uses",
  "4 days old, 7 uses",
  "5 days old, 9 uses",
  "2 days old, 5 uses",
  "5 days old, 8 uses",
  "4 days old, 6 uses",
  "0 days old, 4 uses",
  "5 days old, 7 uses",
  "6 days old, 9 uses",
  "3 days old, 5 uses",
  "6 days old, 8 uses",
  "5 days old, 6 uses",
  "1 days old, 4 uses",
  "6 days old, 7 uses",
  "7 days old, 9 uses",
  "4 days old, 5 uses",
  "7 days old, 8 uses",
  "6 days old, 6 uses",
  "2 days old, 4 uses",
  "7 days old, 7 uses",
  "8 days old, 9 uses",
  "5 days old, 5 uses",
  "8 days old, 8 uses",
  "7 days old, 6 uses",
  "3 days old, 4 uses",
  "8 days old, 7 uses",
  "9 days old, 9 uses",
  "6 days old, 5 uses",
  "9 days old, 8 uses",
  "8 days old, 6 uses",
  "4 days old, 4 uses",
  "9 days old, 7 uses",
  "10 days old, 9 uses",
  "0 days old, 3 uses",
  "7 days old, 5 uses",
  "10 days old, 8 uses",
  "9 days old, 6 uses",
  "5 days old, 4 uses",
  "10 days old, 7 uses",
  "11 days old, 9 uses",
  "1 days old, 3 uses",
  "8 days old, 5 uses",
  "11 days old, 8 uses",
  "10 days old, 6 uses",
  "6 days old, 4 uses",
  "11 days old, 7 uses",
  "12 days old, 9 uses",
  "2 days old, 3 uses",
  "9 days old, 5 uses",
  "12 days old, 8 uses",
  "11 days old, 6 uses",
  "7 days old, 4 uses",
  "12 days old, 7 uses",
  "13 days old, 9 uses",
  "3 days old, 3 uses",
  "10 days old, 5 uses",
  "13 days old, 8 uses",
  "12 days old, 6 uses",
  "8 days old, 4 uses",
  "13 days old, 7 uses",
  "14 days old, 9 uses",
  "4 days old, 3 uses",
  "11 days old, 5 uses",
  "14 days old, 8 uses",
  "13 days old, 6 uses",
  "9 days old, 4 uses",
  "14 days old, 7 uses",
  "15 days old, 9 uses",
  "5 days old, 3 uses",
  "12 days old, 5 uses",
  "15 days old, 8 uses",
  "14 days old, 6 uses",
  "10 days old, 4 uses",
  "15 days old, 7 uses",
  "16 days old, 9 uses",
  "6 days old, 3 uses",
  "13 days old, 5 uses",
  "16 days old, 8 uses",
  "15 days old, 6 uses",
  "11 days old, 4 uses",
  "16 days old, 7 uses",
  "17 days old, 9 uses",
  "7 days old, 3 uses",
  "14 days old, 5 uses",
  "17 days old, 8 uses",
  "0 days old, 2 uses",
  "16 days old, 6 uses",
  "12 days old, 4 uses",
  "17 days old, 7 uses",
  "18 days old, 9 uses",
  "8 days old, 3 uses",
  "15 days old, 5 uses",
  "18 days old, 8 uses",
  "1 days old, 2 uses",
  "17 days old, 6 uses",
  "13 days old, 4 uses",
  "18 days old, 7 uses",
  "19 days old, 9 uses",
  "9 days old, 3 uses",
  "16 days old, 5 uses",
  "19 days old, 8 uses",
  "2 days old, 2 uses",
  "18 days old, 6 uses",
  "14 days old, 4 uses",
  "19 days old, 7 uses",
  "20 days old, 9 uses",
  "10 days old, 3 uses",
  "17 days old, 5 uses",
  "20 days old, 8 uses",
  "3 days old, 2 uses",
  "19 days old, 6 uses",
  "15 days old, 4 uses",
  "20 days old, 7 uses",
  "21 days old, 9 uses",
  "11 days old, 3 uses",
  "18 days old, 5 uses",
  "21 days old, 8 uses",
  "4 days old, 2 uses",
  "20 days old, 6 uses",
  "16 days old, 4 uses",
  "21 days old, 7 uses",
  "22 days old, 9 uses",
  "12 days old, 3 uses",
  "19 days old, 5 uses",
  "22 days old, 8 uses",
  "5 days old, 2 uses",
  "21 days old, 6 uses",
  "17 days old, 4 uses",
  "22 days old, 7 uses",
  "23 days old, 9 uses",
  "13 days old, 3 uses",
  "20 days old, 5 uses",
  "23 days old, 8 uses",
  "6 days old, 2 uses",
  "22 days old, 6 uses",
  "18 days old, 4 uses",
  "23 days old, 7 uses",
  "24 days old, 9 uses",
  "14 days old, 3 uses",
  "21 days old, 5 uses",
  "24 days old, 8 uses",
  "7 days old, 2 uses",
  "23 days old, 6 uses",
  "19 days old, 4 uses",
  "24 days old, 7 uses",
  "25 days old, 9 uses",
  "15 days old, 3 uses",
  "22 days old, 5 uses",
  "25 days old, 8 uses",
  "8 days old, 2 uses",
  "24 days old, 6 uses",
  "20 days old, 4 uses",
  "25 days old, 7 uses",
  "26 days old, 9 uses",
  "16 days old, 3 uses",
  "23 days old, 5 uses",
  "26 days old, 8 uses",
  "9 days old, 2 uses",
  "25 days old, 6 uses",
  "21 days old, 4 uses",
  "26 days old, 7 uses",
  "27 days old, 9 uses",
  "17 days old, 3 uses",
  "24 days old, 5 uses",
  "27 days old, 8 uses",
  "10 days old, 2 uses",
  "26 days old, 6 uses",
  "22 days old, 4 uses",
  "27 days old, 7 uses",
  "28 days old, 9 uses",
  "18 days old, 3 uses",
  "25 days old, 5 uses",
  "28 days old, 8 uses",
  "11 days old, 2 uses",
  "27 days old, 6 uses",
  "23 days old, 4 uses",
  "28 days old, 7 uses",
  "29 days old, 9 uses",
  "19 days old, 3 uses",
  "26 days old, 5 uses",
  "29 days old, 8 uses",
  "12 days old, 2 uses",
  "28 days old, 6 uses",
  "24 days old, 4 uses",
  "29 days old, 7 uses",
  "20 days old, 3 uses",
  "27 days old, 5 uses",
  "13 days old, 2 uses",
  "29 days old, 6 uses",
  "25 days old, 4 uses",
  "21 days old, 3 uses",
  "28 days old, 5 uses",
  "14 days old, 2 uses",
  "26 days old, 4 uses",
  "22 days old, 3 uses",
  "29 days old, 5 uses",
  "15 days old, 2 uses",
  "27 days old, 4 uses",
  "0 days old, 1 uses",
  "23 days old, 3 uses",
  "16 days old, 2 uses",
  "28 days old, 4 uses",
  "1 days old, 1 uses",
  "24 days old, 3 uses",
  "17 days old, 2 uses",
  "29 days old, 4 uses",
  "2 days old, 1 uses",
  "25 days old, 3 uses",
  "18 days old, 2 uses",
  "3 days old, 1 uses",
  "26 days old, 3 uses",
  "19 days old, 2 uses",
  "4 days old, 1 uses",
  "27 days old, 3 uses",
  "20 days old, 2 uses",
  "5 days old, 1 uses",
  "28 days old, 3 uses",
  "21 days old, 2 uses",
  "6 days old, 1 uses",
  "29 days old, 3 uses",
  "22 days old, 2 uses",
  "7 days old, 1 uses",
  "23 days old, 2 uses",
  "8 days old, 1 uses",
  "24 days old, 2 uses",
  "9 days old, 1 uses",
  "25 days old, 2 uses",
  "10 days old, 1 uses",
  "26 days old, 2 uses",
  "11 days old, 1 uses",
  "27 days old, 2 uses",
  "12 days old, 1 uses",
  "28 days old, 2 uses",
  "13 days old, 1 uses",
  "29 days old, 2 uses",
  "14 days old, 1 uses",
  "15 days old, 1 uses",
  "16 days old, 1 uses",
  "17 days old, 1 uses",
  "18 days old, 1 uses",
  "19 days old, 1 uses",
  "20 days old, 1 uses",
  "21 days old, 1 uses",
  "22 days old, 1 uses",
  "23 days old, 1 uses",
  "24 days old, 1 uses",
  "25 days old, 1 uses",
  "26 days old, 1 uses",
  "27 days old, 1 uses",
  "28 days old, 1 uses",
  "29 days old, 1 uses",
  "yearold highuse",
  "yearold unsaved",
  "dim api autosuggest",
]
`;

exports[`filterSortRecentSearches filter/sort recent searches for query |high| 1`] = `
[
  "dayold highuse",
  "yearold highuse",
]
`;
